objects/tffa__ListOfValues__c.object
<CustomObject>
    <description>A list of name-value pairs. The names appear as options on a drop-down list in a form. The value of the selected option (pair) gets stored on the field. ListOfValues is primarily used for maintaining dynamic lists that undergo frequent changes as opposed to static lists (lov.en-US.json) which don&apos;t change after deployment. e.g. industry codes - NAICS, occupation-codes - SOC. It can also be used for storing ad hoc lists e.g. state lists of foreign countries, etc</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical identifier that is more human friendly.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summarized description, meant to provide a quick overview about the list of values.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the list as unavailable for consumption</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Items__c</fullName>
        <description>Collection of list of value items (name value pairs) as a JSON string.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Items</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Locale__c</fullName>
        <defaultValue>$Setup.tffa__EnvironmentConfiguration__c.tffa__DefaultLocale__c</defaultValue>
        <description>The language (or broadly locale) associated with the list of values, specifically the names (or labels) of the items. Depending on the languages supported, a single list can have many versions - one for each language.</description>
        <label>Locale</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Language</valueSetName>
        </valueSet>
    </fields>
    <label>List of Values</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Description__c</columns>
        <columns>tffa__Disabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List of Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>